--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@
 # ==========================================
 
 # Token Bot Telegram (dapatkan dari @BotFather)
-BOT_TOKEN=8364315145:AAF7LKlsIKm91tOa4vmyxM7k4pQTFscKH5A
+BOT_TOKEN=8525349499:AAEFR9JdzbKTT8mKwNh3w-OIn9OPqWDaDsw
 
 # ==========================================
 # OPSIONAL (untuk fitur admin)
@@ -57,7 +57,7 @@ WEB_URL=http://danzhosting.my.id:3000
 # Setup: sudo ./scripts/setup-local-api.sh <API_ID> <API_HASH>
 # 
 # Kosongkan jika menggunakan Bot API biasa (limit 20MB/50MB)
-LOCAL_API_URL=http://localhost:8081
+LOCAL_API_URL=
 
 # API credentials untuk Local Bot API Server
 # Dapatkan dari https://my.telegram.org -> "API development tools"
@@ -82,7 +82,7 @@ MAX_CONCURRENT_BUILDS=4
 # Domain yang diizinkan (pisahkan dengan koma)
 # Contoh: web2apk.com,panel.web2apk.com,localhost
 # Kosongkan untuk menonaktifkan (TIDAK DISARANKAN)
-ALLOWED_DOMAINS=localhost,127.0.0.1,danzhosting.my.id
+ALLOWED_DOMAINS=localhost,127.0.0.1
 
 # License key server (wajib diisi untuk proteksi)
 # Generate key unik anda: node -e "console.log(require('crypto').randomUUID())"
